--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
     <main class="apresentação">
         <section class="apresentação_conteudo">
-            <h1 class="apresentação_titulo">Eleve seu negócio digital a outro nível com <strong class ="title-destaque"> um desenvolvimento Fullstack de qualidade! </strong> </h1>
-            <p class="apresentaçao_texto">Olá! Sou Gabriela Isabel, desenvolvedora de software fullstack com experiência em Python, JavaScript, HTML5 e CSS3. Tenho paixão por transformar ideias em soluções funcionais, ajudando negócios a integrarem sistemas e otimizarem processos. Vamos construir algo incrível juntos?</p>
+            <h1 class="apresentação_titulo">Explorando o mundo da tecnologia para <strong class ="title-destaque"> criar soluções digitais! </strong> </h1>
+            <p class="apresentaçao_texto">Olá! Sou Gabriela Isabel, estudante de tcnologia e gestão com habilidades em Python, JavaScript, HTML5 e CSS3. Tenho paixão por transformar ideias em soluções funcionais, ajudando negócios a integrarem sistemas e otimizarem processos. Vamos construir algo incrível juntos?</p>
             <div class="apresentaçao__links"> 
                 <h2 class="apresentaçao_links_subtitle"> Acesse minhas redes: </h2>
                 <a class="apresentaçao_links_botoes" href="https://linkedin.com/in/gabriela-isabel-95b30524b">
