--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img   class="apresentação_imagem" src="img/Imagem.png" alt="Foto de uma mulher(Gabi)">
     </main>
     <footer class="rodape">
-            <p>Desenvolvido por Gabriela Isabel | Contato: <a href="mailto:gabriela.isabel@gmail.com">gabriela.isabel@gmail.com</a> | © 2025 Todos os direitos reservados.</p>
+            <p>Desenvolvido por Gabriela Isabel | Contato: <a href="mailto:gabriiela.isabeel@gmail.com">gabriiela.isabeel@gmail.com</a> | © 2025 Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
