--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <main class="apresentação">
         <section class="apresentação_conteudo">
             <h1 class="apresentação_titulo">Explorando o mundo da tecnologia para <strong class ="title-destaque"> criar soluções digitais! </strong> </h1>
-            <p class="apresentaçao_texto">Olá! Sou Gabriela Isabel, estudante de tecnologia com conhecimentos em Python, JavaScript, HTML5 e CSS3. Tenho paixão por transformar ideias em soluções funcionais, ajudando negócios a integrarem sistemas e otimizarem processos. Vamos construir algo incrível juntos?</p>
+            <p class="apresentaçao_texto">Olá! Sou Gabriela Isabel, estudante de Sistemas de Informação na Universidade de Pernambuco (UPE).
+Tenho interesse nas áreas de Desenvolvimento Backend, Testes de Software e Banco de Dados. Gosto de entender o funcionamento por trás das tecnologias, criar soluções eficientes e aplicar a lógica de forma criativa no desenvolvimento de sistemas. Estou sempre em busca de novos aprendizados e desafios que me ajudem a evoluir tecnicamente e profissionalmente.</p>
             <div class="apresentaçao__links"> 
                 <h2 class="apresentaçao_links_subtitle"> Acesse minhas redes: </h2>
                 <a class="apresentaçao_links_botoes" href="https://linkedin.com/in/gabriela-isabel-95b30524b">
