--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <main class="apresentação"> 
         <section class="apresentação_conteudo">
             <h1 class="apresentação_titulo">Quem sou eu?</h1>
-            <p class="apresentaçao_texto"> Olá! Sou Gabriela Isabel, estudante de Sistemas de Informação na Universidade de Pernambuco (UPE). Minha conexão com a tecnologia vai além do código — gosto de entender como as coisas funcionam, buscar soluções criativas para problemas e explorar o impacto da inovação no dia a dia. Estou sempre aprendendo e aprimorando minhas habilidades, focada em crescer como Desenvolvedora Backend.</p>
+            <p class="apresentaçao_texto">Minha conexão com a tecnologia vai além do código — gosto de entender como as coisas funcionam, buscar soluções criativas para problemas e explorar o impacto da inovação no dia a dia. Estou sempre aprendendo e aprimorando minhas habilidades, focada em crescer como Desenvolvedora Backend.</p>
             <p class="apresentaçao_texto"> <h2 class="apresentação_titulo2">Tecnologias e ferramentas</h2>
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; align-items: center;">
                         <div>
